# OneLibrary

./: .gitattributes  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  Doxyfile  OneLibraryConfig.cmake  README.md  vcpkg.json
.github/workflows/: cmake.yml
cmake/: FindCatch2.cmake  GetCPM.cmake  OneLibraryConfig.cmake  OneLibraryConfig.cmake.in  Util.cmake  Version.h.in  config.cmake.in  generate-lib.cmake
docs/: arg_parsing.md
docs/html/: _constants_8h_source.html  _enums_8h_source.html  _input_8h_source.html  _input_gatherer_8h_source.html  _input_gatherer_keyboard_8h_source.html  _input_gatherer_mouse_8h_source.html  _input_simulator_8h_source.html  _input_simulator_keyboard_8h_source.html  _input_simulator_mouse_8h_source.html  _threadsafe_queue_8h_source.html  annotated.html  classes.html  classol_1_1_input_gatherer-members.html  classol_1_1_input_gatherer.html  classol_1_1_input_gatherer_keyboard-members.html  classol_1_1_input_gatherer_keyboard.html  classol_1_1_input_gatherer_mouse-members.html  classol_1_1_input_gatherer_mouse.html  classol_1_1_input_simulator-members.html  classol_1_1_input_simulator.html  classol_1_1_input_simulator_keyboard-members.html  classol_1_1_input_simulator_keyboard.html  classol_1_1_input_simulator_mouse-members.html  classol_1_1_input_simulator_mouse.html  classol_1_1_threadsafe_queue-members.html  classol_1_1_threadsafe_queue.html  dir_082381fea848a5f4e1ea0bbe08b48f7f.html  dir_0bca4b8b826309146ed5e3da3533258e.html  dir_1d028113463edb25072e5b765515f3dc.html  dir_23684cfc28ecc0059b1a31836d431078.html  dir_2e0286f91dcd8becbb2a1b9aac590458.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8199a5187c82e88c06899628330953fa.html  dir_b59a7aaa1d1217d4d2eed1bbbdce2774.html  dir_bf20b5c61272c16f4c8f232b94ce46fc.html  dir_c4aa4c0a0e4578d0a19490eb632abe13.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_db5e3432d15bc6f614bc4bb8d601f8f2.html  dir_ec7aa53b01010c60d8705a3bb6c21c12.html  dir_f589415f3c105900ef2d33545b7da70d.html  (+12 more)
docs/html/search/: all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js
docs/latex/: _constants_8h_source.tex  _enums_8h_source.tex  _input_8h_source.tex  _input_gatherer_8h_source.tex  _input_gatherer_keyboard_8h_source.tex  _input_gatherer_mouse_8h_source.tex  _input_simulator_8h_source.tex  _input_simulator_keyboard_8h_source.tex  _input_simulator_mouse_8h_source.tex  _threadsafe_queue_8h_source.tex  annotated.tex  classol_1_1_input_gatherer.eps  classol_1_1_input_gatherer.tex  classol_1_1_input_gatherer_keyboard.eps  classol_1_1_input_gatherer_keyboard.tex  classol_1_1_input_gatherer_mouse.eps  classol_1_1_input_gatherer_mouse.tex  classol_1_1_input_simulator.eps  classol_1_1_input_simulator.tex  classol_1_1_input_simulator_keyboard.eps  classol_1_1_input_simulator_keyboard.tex  classol_1_1_input_simulator_mouse.eps  classol_1_1_input_simulator_mouse.tex  classol_1_1_threadsafe_queue.tex  files.tex  hierarchy.tex  refman.tex  structol_1_1_input.tex  structol_1_1_keyboard_input.tex  structol_1_1_mouse_input.tex
include/OneLibrary/: Clipboard.h  Constants.h  Enums.h  Input.h  InputGatherer.h  InputGathererClipboard.h  InputGathererKeyboard.h  InputGathererMouse.h  InputSimulator.h  InputSimulatorClipboard.h  InputSimulatorKeyboard.h  InputSimulatorMouse.h  InputTable.h  InterruptException.h  KeyboardReceiver.h  KeyboardSender.h  MessageTimer.h  MouseReceiver.h  MouseSender.h  PCH.h  ThreadsafeQueue.h  Version.h
src/OneLibrary/: Clipboard.cpp  Input.cpp
src/OneLibrary/InputGatherer/Clipboard/Windows/: InputGathererClipboard.cpp
src/OneLibrary/InputGatherer/Keyboard/Linux/: InputGathererKeyboard.cpp
src/OneLibrary/InputGatherer/Keyboard/Mac/: InputGathererKeyboard.cpp
src/OneLibrary/InputGatherer/Keyboard/Windows/: InputGathererKeyboard.cpp
src/OneLibrary/InputGatherer/Mouse/Linux/: InputGathererMouse.cpp
src/OneLibrary/InputGatherer/Mouse/Mac/: InputGathererMouse.cpp
src/OneLibrary/InputGatherer/Mouse/Windows/: InputGathererMouse.cpp
src/OneLibrary/InputSimulator/Clipboard/Windows/: InputSimulatorClipboard.cpp
src/OneLibrary/InputSimulator/Keyboard/Linux/: InputSimulatorKeyboard.cpp
src/OneLibrary/InputSimulator/Keyboard/Mac/: InputSimulatorKeyboard.cpp
src/OneLibrary/InputSimulator/Keyboard/Windows/: InputSimulatorKeyboard.cpp
src/OneLibrary/InputSimulator/Mouse/Linux/: InputSimulatorMouse.cpp
src/OneLibrary/InputSimulator/Mouse/Mac/: InputSimulatorMouse.cpp
src/OneLibrary/InputSimulator/Mouse/Windows/: InputSimulatorMouse.cpp
src/OneLibrary/Receiver/Keyboard/Windows/: KeyboardReceiver.cpp
src/OneLibrary/Receiver/Mouse/Windows/: MouseReceiver.cpp
src/OneLibrary/Sender/Keyboard/Windows/: KeyboardSender.cpp
src/OneLibrary/Sender/Mouse/Windows/: MouseSender.cpp
src/OneLibrary/Utils/Windows/MessageTimer/: MessageTimer.cpp
tests/: CMakeLists.txt  README.md  ThreadsafeQueueTests.cpp
tests/automated/: CMakeLists.txt  InputTableTests.cpp  ThreadsafeQueueTests.cpp  main.cpp
tests/manual/: CMakeLists.txt  ClipboardTests.cpp  KeyboardTests.cpp  MouseTests.cpp  main.cpp
